force-app/main/default/objects/ARF_Credit_Check__c/ARF_Credit_Check__c.object-meta.xml
<CustomObject>
    <label>Credit Check</label>
    <pluralLabel>Credit Checks</pluralLabel>
    <nameField>
        <label>Check Number</label>
        <displayFormat>CC-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>