force-app/main/default/objects/ARF_Credit_Check__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Dun_and_Bradstreet</fullName><default>false</default></value>
            <value><fullName>Experian</fullName><default>false</default></value>
            <value><fullName>Equifax</fullName><default>false</default></value>
            <value><fullName>TransUnion</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>