force-app/main/default/objects/ARF_Credit_Check__c/fields/Financial_Stress_Score__c.field-meta.xml
<CustomField>
    <fullName>Financial_Stress_Score__c</fullName>
    <label>Financial Stress Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>