force-app/main/default/objects/ARF_Credit_Check__c/fields/Paydex_Score__c.field-meta.xml
<CustomField>
    <fullName>Paydex_Score__c</fullName>
    <label>Paydex Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>