force-app/main/default/objects/ARF_Credit_Check__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Text</type>
    <length>50</length>
</CustomField>