force-app/main/default/objects/ARF_Credit_Check__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default></value>
            <value><fullName>Completed</fullName><default>false</default></value>
            <value><fullName>Failed</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>